# Chess2720

./: CMakeLists.txt  Chess.zargo  Doxyfile  README.md  log.txt  main.cc
ca/cpsc/chess/: Game.cc  Game.h
ca/cpsc/chess/internal/generic/: Board.cc  Board.h  Game.cc  Game.h  Movement.h
ca/cpsc/chess/internal/impl/: Chess.cc  Chess.h
ca/cpsc/chess/internal/impl/error/: Error.h
ca/cpsc/chess/internal/impl/pieces/: Bishop.cc  Bishop.h  King.cc  King.h  NullPiece.cc  NullPiece.h  Pawn.cc  Pawn.h  Queen.cc  Queen.h  Rook.cc  Rook.h
ca/cpsc/chess/internal/impl/state/impl/: PlayerOneState.cc  PlayerOneState.h  PlayerTwoState.cc  PlayerTwoState.h
ca/cpsc/chess/internal/impl/strats/: BishopStrategy.cc  BishopStrategy.h  KingStrategy.cc  KingStrategy.h  PawnStrategy.cc  PawnStrategy.h  QueenStrategy.cc  QueenStrategy.h  RookStrategy.cc  RookStrategy.h
ca/cpsc/chess/internal/wrappers/: Coord.cc  Coord.h  Piece.cc  Piece.h  Square.cc  Square.h
html/: _bishop_8cc.html  _bishop_8cc_source.html  _bishop_8h.html  _bishop_8h_source.html  _board_8cc.html  _board_8cc_source.html  _board_8h.html  _board_8h_source.html  _chess_8cc.html  _chess_8cc_source.html  _chess_8h.html  _chess_8h_source.html  _game_8cc.html  _game_8cc_source.html  _game_8h.html  _game_8h_source.html  _king_8cc.html  _king_8cc_source.html  _king_8h.html  _king_8h_source.html  _null_piece_8cc.html  _null_piece_8cc_source.html  _null_piece_8h.html  _null_piece_8h_source.html  _pawn_8cc.html  _pawn_8cc_source.html  _pawn_8h.html  _pawn_8h_source.html  _piece_8cc.html  _piece_8cc_source.html  _piece_8h.html  _piece_8h_source.html  _queen_8cc.html  _queen_8cc_source.html  _queen_8h.html  _queen_8h_source.html  _rook_8cc.html  _rook_8cc_source.html  _rook_8h.html  _rook_8h_source.html  (+66 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_1.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: BishopStrategy.h  Board.cc  Board.h  Chess.cc  Chess.h  Coord.h  Game.cc  Game.h  KingStrategy.cc  KingStrategy.h  Movement.h  PawnStrategy.h  Piece.cc  Piece.h  PlayerOneState.h  PlayerTwoState.h  QueenStrategy.h  RookStrategy.h  Square.cc  Square.h  State.h  main.cc
